[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/ros2_utils",
    "crates/twist_to_kobuki",
    "crates/keyboard_to_twist",
    "crates/geometry_msgs",
]

[workspace.dependencies]
# Internal
ros2_utils = { path = "crates/ros2_utils" }
geometry_msgs = { path = "crates/geometry_msgs" }

# Third party
kobuki-interface = { git = "https://github.com/rust-aarhus/kobuki-interface.git", branch = "main" }
anyhow = "1.0.97"
tokio = "1.44.1"
tokio-serial = "5.4.5"
ros2-client = "0.8.1"
mio = "^0.6.23"
mio-extras = "2.0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
crossterm = "0.27.0"
device_query = "1.1.3"
