[package]
name = "twist_to_kobuki"
version = "0.1.0"
edition = "2024"

[dependencies]
kobuki-interface.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
ros2-client = "0.8.1"
mio = "^0.6.23"
mio-extras = "2.0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
